# lockinspiel

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  lockinspiel-gtk.doap  meson.build
.github/workflows/: ci.yml
build-aux/: live.Lockinspiel.Devel.json  live.lockinspiel.Devel.json
crates/: meson.build
crates/lockinspiel-common/: Cargo.toml
crates/lockinspiel-common/migrations/: 000-initial.sql
crates/lockinspiel-common/src/: client.rs  db.rs  lib.rs  timer.rs
crates/lockinspiel-egui/: Cargo.toml  index.html
crates/lockinspiel-egui/assets/: sw.js
crates/lockinspiel-egui/src/: app.rs  lib.rs  main.rs
crates/lockinspiel-gtk/: Cargo.toml  README.md  lockinspiel-gtk.doap  meson.build
crates/lockinspiel-gtk/data/: live.Lockinspiel.metainfo.xml.in.in  live.Lockinspiel.service.in  live.lockinspiel.gschema.xml.in
crates/lockinspiel-gtk/data/resources/: lockinspiel.cmb  resources.gresource.xml
crates/lockinspiel-gtk/data/resources/ui/: shortcuts.ui
crates/lockinspiel-gtk/po/: POTFILES.in
crates/lockinspiel-gtk/src/: application.rs  main.rs  meson.build  window.rs
crates/lockinspiel-tinker-terminal/: Cargo.toml  README.md
crates/lockinspiel-tinker-terminal/src/: error.rs  main.rs  time_sync.rs
data/: live.Lockinspiel.desktop.in.in  live.Lockinspiel.gschema.xml.in  live.Lockinspiel.metainfo.xml.in.in
data/resources/: resources.gresource.xml
data/resources/ui/: window.ui
lockinspiel-live/: README.md
lockinspiel-live/supabase/: config.toml
lockinspiel-live/supabase/functions/data_api/: deno.json  index.ts
lockinspiel-live/supabase/functions/data_api/.helix/: languages.toml
src/: application.rs  main.rs  meson.build  window.rs
subprojects/lockinspiel-gtk/: Cargo.toml  README.md  meson.build
subprojects/lockinspiel-gtk/data/: live.Lockinspiel.desktop.in.in  live.Lockinspiel.metainfo.xml.in.in  live.Lockinspiel.service.in
subprojects/lockinspiel-gtk/data/resources/ui/: window.ui
subprojects/lockinspiel-gtk/po/: POTFILES.in
subprojects/lockinspiel-gtk/src/: application.rs  main.rs  meson.build  window.rs
