[workspace]
members = [
  "crates/lockinspiel-tinker-terminal",
  "crates/lockinspiel-common",
  "crates/lockinspiel-gtk",
  "crates/lockinspiel-egui",
]
resolver = "3"

[workspace.dependencies]
color-eyre = "0.6.5"
tokio = { version = "1.47.1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower = { version = "0.5.2", features = ["util"] }
jiff = "0.2.15"

[profile.release]
lto = true
